<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/subtractionMainColor"
    tools:context="es.flaviojmend.tabuada.SubtractionActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pontuation_bar_height"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@color/subtraction_calculation_background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true">
            <es.flaviojmend.tabuada.components.HandwrittenTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rights"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>
            <es.flaviojmend.tabuada.components.HandwrittenTextView
                android:id="@+id/rights"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:text="@string/zero"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
            <es.flaviojmend.tabuada.components.HandwrittenTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/wrongs"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>
            <es.flaviojmend.tabuada.components.HandwrittenTextView
                android:id="@+id/wrongs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:text="@string/zero"/>
        </LinearLayout>

    </RelativeLayout>



    <es.flaviojmend.tabuada.components.HandwrittenTextView
        android:id="@+id/quanto_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:layout_marginTop="@dimen/title_text_size"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/quanto_e"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="@dimen/calculation_padding"
        android:paddingBottom="@dimen/calculation_padding"
        android:background="@color/subtraction_calculation_background">

    <es.flaviojmend.tabuada.components.HandwrittenTextView
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/numbers_size"
        android:layout_marginLeft="@dimen/numbers_margin"
        android:text="@string/zero"/>


    <es.flaviojmend.tabuada.components.HandwrittenTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/numbers_size"
        android:text="@string/subtraction_signal"/>


    <es.flaviojmend.tabuada.components.HandwrittenTextView
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/numbers_size"
        android:layout_marginRight="@dimen/numbers_margin"
        android:text="@string/zero"/>

    </RelativeLayout>

    <GridLayout
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginBottom="@dimen/results_margin_bottom"
        android:layout_alignParentBottom="true">


        <RelativeLayout android:id="@+id/result1"
            android:background="@drawable/rounded_corner"
            android:layout_margin="@dimen/result_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <es.flaviojmend.tabuada.components.HandwrittenTextView
                android:id="@+id/result1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/numbers_size"
                android:layout_marginRight="@dimen/numbers_margin"
                android:text="@string/zero"/>
        </RelativeLayout>

        <RelativeLayout android:id="@+id/result2"
            android:background="@drawable/rounded_corner"
            android:layout_margin="@dimen/result_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <es.flaviojmend.tabuada.components.HandwrittenTextView
                android:id="@+id/result2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/numbers_size"
                android:layout_marginRight="@dimen/numbers_margin"
                android:text="@string/zero"/>
        </RelativeLayout>

        <RelativeLayout android:id="@+id/result3"
            android:background="@drawable/rounded_corner"
            android:layout_margin="@dimen/result_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <es.flaviojmend.tabuada.components.HandwrittenTextView
                android:id="@+id/result3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/numbers_size"
                android:layout_marginRight="@dimen/numbers_margin"
                android:text="@string/zero"/>
        </RelativeLayout>

        <RelativeLayout android:id="@+id/result4"
            android:background="@drawable/rounded_corner"
            android:layout_margin="@dimen/result_margin"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <es.flaviojmend.tabuada.components.HandwrittenTextView
                android:id="@+id/result4Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/numbers_size"
                android:layout_marginRight="@dimen/numbers_margin"
                android:text="@string/zero"/>
        </RelativeLayout>

    </GridLayout>


    <RelativeLayout
        android:id="@+id/result_popup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"

        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/result_square"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_corner_result_subtraction"
            android:elevation="10dp">


            <ImageView
                android:id="@+id/result_icon"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_right"/>

            <es.flaviojmend.tabuada.components.HandwrittenTextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:textColor="@android:color/white"
                android:text="@string/resultado"/>


        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
